[FEAT] colored block structure of the first section under the header

--- a/index.html
+++ b/index.html
@@ -18,8 +18,22 @@
     </header>
     <!--Main-->
     <main>
-        <div class="container-mid">
-            .row
+        <div class="bg-lightblue">
+            <div class="container-mid">
+                <div class="row">
+                    <div class="col-100">
+                        <div class="content-title"></div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-30">
+                        <div class="content"></div>
+                    </div>
+                    <div class="col-70">
+                        <div class="content"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <!--Footer-->
