--- a/index.html
+++ b/index.html
@@ -26,15 +26,75 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-30">
+                    <div class="col-40">
                         <div class="content"></div>
                     </div>
-                    <div class="col-70">
+                    <div class="col-60">
                         <div class="content"></div>
                     </div>
                 </div>
             </div>
         </div>
+        <div class="container-sm">
+            <div class="row">
+                <div class="content-title"></div>
+            </div>
+            <div class="row">
+                <div class="col-33">
+                    <div class="content"></div>
+                </div>
+                <div class="col-33">
+                    <div class="content"></div>
+                </div>
+                <div class="col-33">
+                    <div class="content"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-100">
+                    <div class="content-title"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-60">
+                    <div class="content"></div>
+                </div>
+                <div class="col-40">
+                    <div class="content"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-100">
+                    <div class="content-title"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-33">
+                    <div class="content"></div>
+                </div>
+                <div class="col-33">
+                    <div class="content"></div>
+                </div>
+                <div class="col-33">
+                    <div class="content"></div>
+                </div>
+                <div class="col-33">
+                    <div class="content"></div>
+                </div>
+                <div class="col-33">
+                    <div class="content"></div>
+                </div>
+                <div class="col-33">
+                    <div class="content"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-100">
+                    <div class="content-title"></div>
+                </div>
+            </div>
+        </div>
+        <div class="container-full"></div>
     </main>
     <!--Footer-->
     <footer></footer>
