--- a/index.html
+++ b/index.html
@@ -94,7 +94,45 @@
                 </div>
             </div>
         </div>
-        <div class="container-full"></div>
+        <div class="container-full">
+            <div class="row">
+                <div class="col-33">
+                    <div class="row">
+                        <div class="col-50">
+                            <div class="content-box"></div>
+                        </div>
+                        <div class="col-50">
+                            <div class="content-box"></div>
+                        </div>
+                        <div class="col-50">
+                            <div class="content-box"></div>
+                        </div>
+                        <div class="col-50">
+                            <div class="content-box"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="content-box"></div>
+                </div>
+                <div class="col-33">
+                    <div class="row">
+                        <div class="col-50">
+                            <div class="content-box"></div>
+                        </div>
+                        <div class="col-50">
+                            <div class="content-box"></div>
+                        </div>
+                        <div class="col-50">
+                            <div class="content-box"></div>
+                        </div>
+                        <div class="col-50">
+                            <div class="content-box"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!--Footer-->
     <footer></footer>
