--- a/index.html
+++ b/index.html
@@ -133,8 +133,40 @@
                 </div>
             </div>
         </div>
+        <div class="bg-lightblue">
+            <div class="container-sm">
+                <div class="row">
+                    <div class="content-title"></div>
+                </div>
+            </div>
+        </div>
+        <div class="container-sm">
+            <div class="content"></div>
+        </div>
     </main>
     <!--Footer-->
-    <footer></footer>
+    <footer>
+        <div class="bg-black">
+            <div class="container-mid">
+                <div class="row">
+                    <div class="col-20">
+                        <div class="content"></div>
+                    </div>
+                    <div class="col-20">
+                        <div class="content"></div>
+                    </div>
+                    <div class="col-20">
+                        <div class="content"></div>
+                    </div>
+                    <div class="col-20">
+                        <div class="content"></div>
+                    </div>
+                    <div class="col-20">
+                        <div class="content"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
