[UPD] header stiled

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
     <title>Dropbox</title>
 </head>
@@ -11,8 +14,22 @@
     <header>
         <div class="container-full">
             <div class="row">
-                <div class="content-footer txt-left"></div>
-                <div class="content-footer txt-right"></div>
+                <div class="content-header txt-left v-middle">
+                    <ul>
+                        <li><a class="unstyle-link"><img src="./img/logo-small.png" alt="Dropbox" class="logo v-middle"></a></li>
+                        <li><a class="unstyle-link">Perchè Dopbox</a></li>
+                        <li><a class="unstyle-link">Funzioni</a></li>
+                        <li><a class="unstyle-link">Piani e Prezzi</a></li>
+                    </ul>
+                </div>
+                <div class="content-header txt-right v-middle">
+                    <ul>
+                        <li><a class="unstyle-link">Supporto</a></li>
+                        <li><a class="unstyle-link">contatta l'ufficio vendite</a></li>
+                        <li><a class="unstyle-link">Accedi</a></li>
+                        <li class="bg-blue btn"><a class="unstyle-link txt-white">Inizia</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
