--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Dropbox</title>
 </head>
@@ -39,15 +40,24 @@
             <div class="container-mid">
                 <div class="row">
                     <div class="col-100">
-                        <div class="content-title"></div>
+                        <div class="content-sm">
+                            <h1>Tutto ciò che ti serve per il lovoro, in un unico posto</h1>
+                        </div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-40">
-                        <div class="content"></div>
+                    <div class="col-30">
+                        <div class="content-done">
+                            <p class="mb-35">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropboc Business è piu di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare il flusso di lavoro esistente</p>
+                            <a href="" class="btn bg-blue unstyle-link txt-white mb-35">Inizia la tua prova gratuita</a>
+                            <p class="mt-30 mb-35">Annulla in qualsiasi momento</p>
+                            <i class="fa-solid fa-arrow-down fa-2xl pb-55 mt-50"></i>
+                        </div>
                     </div>
-                    <div class="col-60">
-                        <div class="content"></div>
+                    <div class="col-70">
+                        <div class="content-done">
+                            <img class="jumbo" src="./img/jumbo.png" alt="jumbo">
+                        </div>
                     </div>
                 </div>
             </div>
