[UPD] first set of tabs styled

--- a/index.html
+++ b/index.html
@@ -64,22 +64,90 @@
         </div>
         <div class="container-sm">
             <div class="row">
-                <div class="content-title"></div>
+                <div class="content-title">
+                    <h2 class="mt-100">Trova il piano business che fa per te</h2>
+                    <div class="input-radio">
+                        <input class="v-middle mr-5" type="radio" name="fatturazione" value="mensile"><label class="input-label" for="fatturazione">Fatturazione mensile</label>
+                        <input class="v-middle mr-5" type="radio" name="fatturazione" value="annuale"><label class="input-label" for="fatturazione">Fatturazione annuale</label>
+                    </div>
+                </div>
             </div>
-            <div class="row">
-                <div class="col-33">
-                    <div class="content"></div>
+            <div class="row tab-space-between">
+                <div class="col-33-tab">
+                    <div class="content card-vertical">
+                        <div class="tab-head">
+                            <i class="fa-solid fa-user"></i>Singolo
+                        </div>
+                        <div class="tab-main">
+                            <h3 class="mb-15">Professional</h3>
+                            <p class="mb-5"><strong>&euro; 12.00</strong></p>
+                            <p class="light-grey mb-35">/mese</p>
+                            <p class="mb-15"><i class="fa-solid fa-user"></i>1 utente</p>
+                            <p class="mb-15"><i class="fa-solid fa-folder"></i>5 TB di spazio di archiviazione sicuro</p>
+                            <p class="mb-35"><i class="fa-solid fa-share-nodes"></i>Funzioni di produttività premium e condivisione file semplice e sicura</p>
+                            <div class="btn bg-blue"><a href="" class="unstyle-link txt-white">Prova gratis per 30 giorni</a></div>
+                            <p class="mt-30 mb-30">oppure <a href="">acquista ora</a></p>
+                            <hr class="hr-width mb-50">
+                            <p class="mb-30"><strong>Punti salienti del piano</strong></p>
+                            <p class="mb-15"><i class="fa-solid fa-check txt-blue"></i> Invia file fino a 100GB con Dropbox Transfert</p>
+                            <p><i class="fa-solid fa-check txt-blue"></i> Cartelle offline su dispositivi mobili</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-33">
-                    <div class="content"></div>
+                <div class="col-33-tab">
+                    <div class="content card-vertical">
+                        <div class="tab-head">
+                            <i class="fa-solid fa-users"></i>Team
+                        </div>
+                        <div class="tab-main">
+                            <h3 class="mb-15">Advanced</h3>
+                            <p class="mb-5"><strong>&euro; 18.00</strong></p>
+                            <p class="light-grey mb-35">/utente/mese</p>
+                            <p class="mb-15"><i class="fa-solid fa-users"></i>3 o più utenti</p>
+                            <p class="mb-15"><i class="fa-solid fa-folder"></i>Tutto lo spazio di cui ha bisogno il tuo team</p>
+                            <p class="mb-35"><i class="fa-solid fa-share-nodes"></i>Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team</p>
+                            <div class="btn bg-blue"><a href="" class="unstyle-link txt-white">Prova gratis per 30 giorni</a></div>
+                            <p class="mt-30 mb-30">oppure <a href="">acquista ora</a></p>
+                            <hr class="hr-width mb-50">
+                            <p class="mb-30"><strong>Punti salienti del piano</strong></p>
+                            <p class="mb-15"><i class="fa-solid fa-check txt-blue"></i> Nessun limite di spazio per i file</p>
+                            <p class="mb-15"><i class="fa-solid fa-check txt-blue"></i> Cartelle offline sui dispositivi mobili</p>
+                            <p class="mb-15"><i class="fa-solid fa-check txt-blue"></i> Risparmio del 50% rispetto alle iscrizioni singole</p>
+                            <p class="mb-15"><i class="fa-solid fa-check txt-blue"></i> Possibilità di inserire nuovi membri del team</p>
+                            <p><i class="fa-solid fa-check txt-blue"></i> Gestione dei permessi in base ai ruoli/p>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-33">
-                    <div class="content"></div>
+                <div class="col-33-tab">
+                    <div class="content card-vertical">
+                        <div class="tab-head">
+                            <i class="fa-solid fa-building"></i></i>Azienda
+                        </div>
+                        <div class="tab-main">
+                            <h3 class="mb-15">Enterprise</h3>
+                            <p class="mb-5"><strong>contattaci</strong></p>
+                            <p class="mb-35">-</p>
+                            <p class="mb-15"><i class="fa-solid fa-user"></i>10 o più utenti</p>
+                            <p class="mb-15"><i class="fa-solid fa-folder"></i>Soluzioni personalizzabili per la tua azienda</p>
+                            <p class="mb-35"><i class="fa-solid fa-share-nodes"></i>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</p>
+                            <div class="btn bg-blue"><a href="" class="unstyle-link txt-white">Contattaci</a></div>
+                            <p class="mt-30 mb-30">oppure <a href="">acquista ora</a></p>
+                            <hr class="hr-width mb-50">
+                            <p class="mb-30"><strong>Punti salienti del piano</strong></p>
+                            <p class="mb-15"><i class="fa-solid fa-check txt-blue"></i> Cartelle offline su dispositivi mobili</p>
+                            <p class="mb-15"><i class="fa-solid fa-check txt-blue"></i> Servizio assistenza 24/h</p>
+                            <p><i class="fa-solid fa-check txt-blue"></i> Possibilità di personalizzazione totale</p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-100">
-                    <div class="content-title"></div>
+                    <div class="content-title mt-50">
+                        <div class="tab-head">
+                            <i class="fa-solid fa-building"></i>Team
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
