[UPD] styled tab section and col-33 section

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                             <p class="mb-15"><i class="fa-solid fa-user"></i>10 o più utenti</p>
                             <p class="mb-15"><i class="fa-solid fa-folder"></i>Soluzioni personalizzabili per la tua azienda</p>
                             <p class="mb-35"><i class="fa-solid fa-share-nodes"></i>Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala</p>
-                            <div class="btn bg-blue"><a href="" class="unstyle-link txt-white">Contattaci</a></div>
+                            <div class="btn bg-blue"><a href="" class="unstyle-link txt-white w-100">Contattaci</a></div>
                             <p class="mt-30 mb-30">oppure <a href="">acquista ora</a></p>
                             <hr class="hr-width mb-50">
                             <p class="mb-30"><strong>Punti salienti del piano</strong></p>
@@ -143,49 +143,93 @@
             </div>
             <div class="row">
                 <div class="col-100">
-                    <div class="content-title mt-50">
+                    <div class="content-title mt-50 mb-100 card-horizontal">
                         <div class="tab-head">
                             <i class="fa-solid fa-building"></i>Team
+                        </div>
+                        <div class="row">
+                            <div class="tab-left p-20">
+                                <h3 class="mb-15">Enterprise</h3>
+                                <p class="mb-30 font-small"><strong>Contatta l'ufficio vendite per i prezzi</strong></p>
+                                <p>soluzioni personalizzate su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>
+                            </div>
+                            <div class="tab-right p-20">
+                                <div class=" bg-blue txt-center"><a href="" class="unstyle-link txt-white">Contatta l'ufficio vendite</a></div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-60">
-                    <div class="content"></div>
+                    <div class="content">
+                        <img class="img-size" src="./img/partner.png" alt="">
+                    </div>
                 </div>
                 <div class="col-40">
-                    <div class="content"></div>
+                    <div class="content pl-50">
+                        <h3 class="mb-15 mt-50">Entra in contatto con un partner Dropbox</h3>
+                        <p>Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obbiettivi aziendalli, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                        <div class="btn-white bg-white txt-center mt-30"><a href="" class="unstyle-link">Trova un partner</a></div>
+                    </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col-100">
-                    <div class="content-title"></div>
+                    <div class="content-title">
+                        <h2 class="mt-100 mb-50">Esegui più operazioni con Dropbox Business</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row mb-100">
+                <div class="col-33">
+                    <div class="content">
+                        <img src="/img/business-feature-switching-tools.png" alt="Dropbox">
+                        <h3 class="mb-30">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox </p>
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="content">
+                        <img src="/img/business-feature-send-files-it.png" alt="Dropbox">
+                        <h3 class="mb-30">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox </p>
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="content">
+                        <img src="/img/business-feature-coordinate-it.png" alt="Dropbox">
+                        <h3 class="mb-30">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox </p>
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="content">
+                        <img src="/img/business-feature-integrations-it.png" alt="Dropbox">
+                        <h3 class="mb-30">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox </p>
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="content">
+                        <img src="/img/business-feature-multi-device.png" alt="Dropbox">
+                        <h3 class="mb-30">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox </p>
+                    </div>
+                </div>
+                <div class="col-33">
+                    <div class="content">
+                        <img src="/img/business-feature-security.png" alt="Dropbox">
+                        <h3 class="mb-30">Passa di meno da uno strumento all'altro</h3>
+                        <p>Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox </p>
+                    </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-33">
-                    <div class="content"></div>
-                </div>
-                <div class="col-33">
-                    <div class="content"></div>
-                </div>
-                <div class="col-33">
-                    <div class="content"></div>
-                </div>
-                <div class="col-33">
-                    <div class="content"></div>
-                </div>
-                <div class="col-33">
-                    <div class="content"></div>
-                </div>
-                <div class="col-33">
-                    <div class="content"></div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-100">
-                    <div class="content-title"></div>
+                <div class="col-60">
+                    <div class="content-title">
+                        <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
+                    </div>
                 </div>
             </div>
         </div>
