[UPD] box row styled and logos centered

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <div class="container-sm">
             <div class="row">
                 <div class="content-title">
-                    <h2 class="mt-100">Trova il piano business che fa per te</h2>
+                    <h2 class="mt-125">Trova il piano business che fa per te</h2>
                     <div class="input-radio">
                         <input class="v-middle mr-5" type="radio" name="fatturazione" value="mensile"><label class="input-label" for="fatturazione">Fatturazione mensile</label>
                         <input class="v-middle mr-5" type="radio" name="fatturazione" value="annuale"><label class="input-label" for="fatturazione">Fatturazione annuale</label>
@@ -311,12 +311,11 @@
         </div>
         <div class="bg-lightblue">
             <div class="container-sm">
-                <div class="row">
-                    <div class="content-title">
-                        <h2 class="p-100 w-70">Porta Dropbox Business nella tua azienda.</h2>
-                        <div class="btn-white bg-white txt-center mt-30"><a href="" class="unstyle-link">Trova un partner</a></div>
-                        
+                <div class="row tab-space-between align-items-center">
+                    <div class="col-50">
+                        <h2 class="pt-100 pb-100 txt-bordeaux">Porta Dropbox Business nella tua azienda.</h2>
                     </div>
+                    <div class="btn-white bg-white-noborder txt-center"><a href="" class="unstyle-link">Inizia la tua prova gratuita</a></div>
                 </div>
             </div>
         </div>
