[UPD] q&a section styled and spaced

--- a/index.html
+++ b/index.html
@@ -320,7 +320,37 @@
             </div>
         </div>
         <div class="container-sm">
-            <div class="content"></div>
+            <div class="content">
+                <h2 class="mt-125 mb-50">Domande frequenti</h2>
+                <hr>
+                <div class="question">
+                    <div class="question-txt">
+                        <p class="m-tb-30 bold">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                    </div>
+                    <div class="question-arrow">
+                        <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
+                    </div>
+                </div>
+                <hr>
+                <div class="question">
+                    <div class="question-txt">
+                        <p class="m-tb-30 bold">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                    </div>
+                    <div class="question-arrow">
+                        <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
+                    </div>
+                </div>
+                <hr>
+                <div class="question">
+                    <div class="question-txt">
+                        <p class="m-tb-30 bold">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                    </div>
+                    <div class="question-arrow">
+                        <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
+                    </div>
+                </div>
+                <hr class="mb-100">
+            </div>
         </div>
     </main>
     <!--Footer-->
