[UPD] footer styled

--- a/index.html
+++ b/index.html
@@ -356,23 +356,72 @@
     <!--Footer-->
     <footer>
         <div class="bg-black">
-            <div class="container-mid">
-                <div class="row">
+            <div class="container-mid middle-footer">
+                <div class="row pt-100 pb-100">
                     <div class="col-20">
-                        <div class="content"></div>
+                        <div class="content-footer">
+                            <ul class="ul-footer">
+                                <li class="li-head mb-30">Dopbox</li>
+                                <li class="li-footer mb-15">Applicazioni desktop</li>
+                                <li class="li-footer mb-15">Perchè Dopbox</li>
+                                <li class="li-footer mb-15">Piani</li>
+                                <li class="li-footer mb-15">Sicurezza</li>
+                                <li class="li-footer mb-15">funzioni</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="col-20">
-                        <div class="content"></div>
+                        <div class="content-footer">
+                            <ul class="ul-footer">
+                                <li class="li-head mb-30">Prodotti</li>
+                                <li class="li-footer mb-15">Applicazioni desktop</li>
+                                <li class="li-footer mb-15">Perchè Dopbox</li>
+                                <li class="li-footer mb-15">Piani</li>
+                                <li class="li-footer mb-15">Sicurezza</li>
+                                <li class="li-footer mb-15">funzioni</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="col-20">
-                        <div class="content"></div>
+                        <div class="content-footer">
+                            <ul class="ul-footer">
+                                <li class="li-head mb-30">Azienda</li>
+                                <li class="li-footer mb-15">Applicazioni desktop</li>
+                                <li class="li-footer mb-15">Perchè Dopbox</li>
+                                <li class="li-footer mb-15">Piani</li>
+                                <li class="li-footer mb-15">Sicurezza</li>
+                                <li class="li-footer mb-15">funzioni</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="col-20">
-                        <div class="content"></div>
+                        <div class="content-footer">
+                            <ul class="ul-footer">
+                                <li class="li-head mb-30">Supporto</li>
+                                <li class="li-footer mb-15">Applicazioni desktop</li>
+                                <li class="li-footer mb-15">Perchè Dopbox</li>
+                                <li class="li-footer mb-15">Piani</li>
+                                <li class="li-footer mb-15">Sicurezza</li>
+                                <li class="li-footer mb-15">funzioni</li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="col-20">
-                        <div class="content"></div>
+                        <div class="content-footer">
+                            <ul class="ul-footer">
+                                <li class="li-head mb-30">Comunity</li>
+                                <li class="li-footer mb-15">Applicazioni desktop</li>
+                                <li class="li-footer mb-15">Perchè Dopbox</li>
+                                <li class="li-footer mb-15">Piani</li>
+                                <li class="li-footer mb-15">Sicurezza</li>
+                                <li class="li-footer mb-15">funzioni</li>
+                            </ul>
+                        </div>
                     </div>
+                </div>
+                <hr class="w-10">
+                <div class="lang mt-30 pb-30">
+                    <p><i class="fa-solid fa-earth-americas"></i> Italiano <i class="fa-solid fa-caret-up fa-sm"></i></p>
                 </div>
             </div>
         </div>
