--- a/index.html
+++ b/index.html
@@ -253,29 +253,29 @@
                 <div class="col-33">
                     <div class="row">
                         <div class="col-50">
-                            <div class="content-box-sides">
-                                <img class="size-logos" src="/img/designit.svg" alt="designit">
+                            <div class="content-box-sides bg-lightgreen-border">
+                                <img class="size-logos logo-white" src="/img/designit.svg" alt="designit">
                             </div>
                         </div>
                         <div class="col-50">
-                            <div class="content-box-sides">
-                                <img class="size-logos" src="/img/arizona_state_university.svg" alt="asu">
+                            <div class="content-box-sides bg-bordaux">
+                                <img class="size-logos logo-white" src="/img/arizona_state_university.svg" alt="asu">
                             </div>
                         </div>
                         <div class="col-50">
-                            <div class="content-box-sides">
-                                <img class="size-logos" src="/img/university_of_florida.svg" alt="designit">
+                            <div class="content-box-sides bg-sky-blue">
+                                <img class="size-logos logo-white" src="/img/university_of_florida.svg" alt="designit">
                             </div>
                         </div>
                         <div class="col-50">
-                            <div class="content-box-sides">
-                                <img class="size-logos" src="/img/topps.svg" alt="designit">
+                            <div class="content-box-sides bg-red">
+                                <img class="size-logos logo-white" src="/img/topps.svg" alt="designit">
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-33">
-                    <div class="content-box">
+                    <div class="content-box bg-paper">
                         <img class="size-logos" src="/img/designit.svg" alt="designit">
                         <hr class="mt-50 w-20 opa-50">
                         <p class="mt-50">"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte soluzioni sono compatibili con queste esigenze, soluzioni sono compatibili con queste esigenze, ma nessuna è facile quando Dropbox Paper".</p>
@@ -286,23 +286,23 @@
                 <div class="col-33">
                     <div class="row">
                         <div class="col-50">
-                            <div class="content-box-sides">
-                                <img class="size-logos" src="/img/world_bicycle_relief.svg" alt="designit">
+                            <div class="content-box-sides bg-darkred">
+                                <img class="size-logos logo-white" src="/img/world_bicycle_relief.svg" alt="designit">
                             </div>
                         </div>
                         <div class="col-50">
-                            <div class="content-box-sides">
-                                <img class="size-logos" src="/img/hearst_corp.svg" alt="designit">
+                            <div class="content-box-sides bg-bluegray">
+                                <img class="size-logos logo-white" src="/img/hearst_corp.svg" alt="designit">
                             </div>
                         </div>
                         <div class="col-50">
-                            <div class="content-box-sides">
-                                <img class="size-logos" src="/img/lonely_planet.svg" alt="designit">
+                            <div class="content-box-sides bg-darkblue">
+                                <img class="size-logos logo-white" src="/img/lonely_planet.svg" alt="designit">
                             </div>
                         </div>
                         <div class="col-50">
-                            <div class="content-box-sides">
-                                <img class="size-logos" src="/img/clear_channel.svg" alt="designit">
+                            <div class="content-box-sides bg-yellow">
+                                <img class="size-logos logo-white" src="/img/clear_channel.svg" alt="designit">
                             </div>
                         </div>
                     </div>
