--- a/index.html
+++ b/index.html
@@ -323,13 +323,18 @@
             <div class="content">
                 <h2 class="mt-125 mb-50">Domande frequenti</h2>
                 <hr>
-                <div class="question">
-                    <div class="question-txt">
-                        <p class="m-tb-30 bold">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                <div class="d-block">
+                    <div class="question">
+                        <div class="question-txt">
+                            <p class="m-tb-30 bold">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</p>
+                        </div>
+                        <div class="question-arrow">
+                            <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
+                        </div>
                     </div>
-                    <div class="question-arrow">
-                        <i class="fa-solid fa-angle-down fa-xs m-tb-30 pr-35 pt-15"></i>
-                    </div>
+                </div>
+                <div class="d-none">
+                    <p class="m-tb-30 bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet veniam corporis, at quod sapiente error eligendi expedita libero recusandae ut dolor iusto, doloribus sequi provident vel? Nulla dolore similique qui?</p>
                 </div>
                 <hr>
                 <div class="question">
